--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "popper": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-popper": "^2.2.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
