--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.4",
